# Smart-notes

./: .gitignore  README.md  package-lock.json  package.json
apps/backend/: cromadb_client.py  local_vectors.json  main.py  pyproject.toml  test_embedder.py  testing-rag.py
apps/backend/src/: cache.py  chunking.py  embedder.py
apps/desktop-notes/: .npmrc  GETTING_STARTED.md  IMPLEMENTATION_NOTES.md  IMPLEMENTATION_SUMMARY.md  README.md  index.html  package.json  vite.config.ts
apps/desktop-notes/electron/: main.js  preload.js
apps/desktop-notes/src/: App.css  App.tsx  index.css
apps/desktop-notes/src/components/: Editor.css  Editor.tsx  RenameModal.css  RenameModal.tsx  Sidebar.css  Sidebar.tsx  TopBar.css  TopBar.tsx
apps/desktop-notes/src/types/: electron.d.ts
apps/editor/: EDITORS-README.md  README.md  index.html  package.json  tsconfig.app.json
apps/editor/src/: App.css  App.tsx  index.css
apps/editor/src/editors/: BlockEditor.tsx  BlockNoteEditor.tsx  MinimalEditor.tsx  NovelEditor.tsx
apps/editor/src/styles/: block-editor.css  blocknote-editor.css  minimal-editor.css  novel-editor.css
apps/storage/: .gitignore  README.md  demo.ts  package.json  vitest.config.ts
apps/storage/demo-vault/: README.md
apps/storage/demo-vault/.grimoire/: meta.db
apps/storage/demo-vault/demo/: my-first-note.md  my-first-note.md.tmp-3249tjk4s9d
apps/storage/src/: DB.ts  Watcher.ts  conflicts.ts  events.ts  frontmatter.ts  fsutils.ts  gray-matter.d.ts  index.ts  types.ts  vaultManager.ts
apps/storage/test/: vaultManager.test.ts
