[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "einops>=0.8.2",
    "fastapi>=0.128.4",
    "langchain>=1.2.9",
    "langchain-community>=0.4.1",
    "langchain-litellm>=0.4.0",
    "litellm>=1.81.8",
    "pydantic>=2.12.5",
    "sentence-transformers>=2.2.0",
    "torch>=2.0.0",
    "uvicorn>=0.40.0",
]
